@@ -50,6 +50,8 @@ class IServer : public IServerBase, public std::enable_shared_from_this<IServer>
 
   core::translator_t GetTranslator() const;
 
+  std::vector<common::Value::Type> GetSupportedValueTypes() const;
+  uint32_t GetVersion() const;
   core::ConnectionType GetType() const;
   std::string GetName() const override;
 
