@@ -1,6 +1,7 @@
 1.23.0 /
 [Alexandr Topilski]
 - Get key type context menu item
+- Get value types by server version
 
 1.23.0 / November 26, 2018
 [Alexandr Topilski]
